--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,7 @@ googleAnalytics = ""
   description = "Describe your website"
   copyright = "public domain"
   sidebarAbout = [
-    "I am a creative illustrator and graphic designer with more than 10 years of experience.",
-    "Originally from Toronto, currently based in London."
+    "OnlySpoolz. Unrolled and Unplugged",
   ]
   # Contact page
      # Since this template is static, the contact form uses www.formspree.io as a
@@ -47,7 +46,7 @@ googleAnalytics = ""
   home = true
 
   [[params.navlinks]]
-  name = "About"
+  name = "About and contributing"
   url = "about/"
 
   [[params.navlinks]]
