fixing github repo address

--- a/config.toml
+++ b/config.toml
@@ -56,12 +56,12 @@ googleAnalytics = ""
   [params.social]
   #facebook      = "full page or profile url in facebook"
   #googleplus    = "full profile url in googleplus"
-  #email         = "yenda#trmal.net"
+  #email         = "yenda@trmal.net"
   #twitter       = "full profile url in twitter"
   #linkedin      = "full profile url in linkedin"
   #stackoverflow = "full profile url in stackoverflow"
   #instagram     = "full profile url in instagram"
-  github        = "https://jtrmal.github.io/spoolz"
+  github        = "https://github.com/jtrmal/spoolz"
   #gitlab        = "full profile url in gitlab"
   #youtube       = "full profile url in youtube"
   #whatsapp      = "wa.me service link"
