change the base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://jtrmal.github.io/spoolz/"
+baseurl = "https://www.onlyspoolz.com/"
 title = "Database of filament spools info"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
