--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.onlyspoolz.com/"
+baseurl = "www.onlyspoolz.com"
 title = "Database of filament spools info"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
