add anycubic petg

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 static/img/portfolio/IMG_3516.jpg
 static/img/portfolio/IMG_3517.jpg
 static/img/portfolio/essentium_sizes_table.png
-
+.hugo_build.lock
